--- a/index.html
+++ b/index.html
@@ -16,9 +16,19 @@
     <button onclick="fetchTodos()">Fetch Todos</button>
     <button onclick="logTodos()">Log Todos</button>
     <button onclick="populateTodos()">Populate Todos</button>
+    <button onclick="filterTodosOldSchool()">Filter Todos (Old School)</button>
+    
+    
+    <div>
+    <input userID="number">
+    <button onclick="filterTodos()">filterTodos</button>
+    </div>
+    <!-- <button onclick="populateTodos()">Populate Todos</button> -->
     <ol id="todo-list">
     <!-- LIs will go here -->
     </ol>
+
+    <ul id="filtered-todos"></ul>
 
 </div>
 </body>
