--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     
     
     <div>
-    <input userID="number">
+    <input userID="number" id="userId-input">
     <button onclick="filterTodos()">filterTodos</button>
     </div>
     <!-- <button onclick="populateTodos()">Populate Todos</button> -->
@@ -29,6 +29,8 @@
     </ol>
 
     <ul id="filtered-todos"></ul>
+
+    <button onclick="clearlist()">clearlist</button>
 
 </div>
 </body>
